# mandelbrot

./: Cargo.toml  README.md
src/: complex.rs  compute_mono.rs  compute_ocl.rs  compute_rayon.rs  field_map.rs  main.rs  mandelbrot_utils.rs  strategy.rs  timeit.rs  utils.rs
