[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
image = "0.25"
rayon = "1.10"
ocl = "0.19"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
human_bytes = "0.4"
