[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
description = "A Mandelbrot set generator written in Rust."
license = "GPL-3.0"
license-file = "LICENSE"
repository = "https://github.com/mad4j/mandelbrot"
homepage = "https://github.com/mad4j/mandelbrot"
documentation = "https://docs.rs/mandelbrot"
keywords = ["mandelbrot", "fractal", "graphics", "rust"]
categories = ["graphics", "science", "visualization"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
image = "0.25"
rayon = "1.10"
ocl = "0.19"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
human_bytes = "0.4"
