[package]
name = "rustedbytes-mandelbrot"
version = "0.1.2"
edition = "2021"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
description = "A Mandelbrot set generator written in Rust."
license = "GPL-3.0"
repository = "https://github.com/mad4j/rustedbytes-mandelbrot"
homepage = "https://github.com/mad4j/rustedbytes-mandelbrot"
keywords = ["mandelbrot", "fractal", "graphics", "rust"]
categories = ["graphics", "science", "visualization"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
image = "0.25.6"
rayon = "1.10.0"
ocl = "0.19.7"
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
human_bytes = "0.4.3"
howlast = "0.1.1"
